[gd_scene load_steps=2 format=3 uid="uid://cu6rpnjfshk0r"]

[ext_resource type="Script" uid="uid://b52jhqpy1xr0k" path="res://scripts/ui/money_ui.gd" id="1_ekdo8"]

[node name="MoneyUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ekdo8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="MoneyLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Cash: 0"

[node name="DebtLabel" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "Debt: [color=red]1000[/color]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BorrowMoneyButton" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
text = "Borrow Cash"
